Bug 727135 - Make jsid marking interfaces indirect; r=billm

This will allow the GC to move jsid referenced objects.