js/src/jswatchpoint.cpp
@@ -210,7 +210,9 @@ WatchpointMap::markIteratively(JSTracer *trc)
 
             const HeapId &id = e.key.id;
             JS_ASSERT(JSID_IS_STRING(id) || JSID_IS_INT(id));
-            MarkId(trc, id, "WatchKey::id");
+            HeapId tmp(id.get());
+            MarkId(trc, &tmp, "WatchKey::id");
+            JS_ASSERT(tmp.get() == id.get());
 
             if (e.value.closure && IsAboutToBeFinalized(e.value.closure)) {
                 MarkObject(trc, &e.value.closure, "Watchpoint::closure");
@@ -226,13 +228,15 @@ WatchpointMap::markAll(JSTracer *trc)
 {
     for (Map::Range r = map.all(); !r.empty(); r.popFront()) {
         Map::Entry &e = r.front();
-        HeapPtrObject tmp(e.key.object);
-        MarkObject(trc, &tmp, "held Watchpoint object");
-        JS_ASSERT(tmp == e.key.object);
+        HeapPtrObject tmpObj(e.key.object);
+        MarkObject(trc, &tmpObj, "held Watchpoint object");
+        JS_ASSERT(tmpObj == e.key.object);
 
         const HeapId &id = e.key.id;
         JS_ASSERT(JSID_IS_STRING(id) || JSID_IS_INT(id));
-        MarkId(trc, id, "WatchKey::id");
+        HeapId tmpId(id.get());
+        MarkId(trc, &tmpId, "WatchKey::id");
+        JS_ASSERT(tmpId.get() == id.get());
 
         MarkObject(trc, &e.value.closure, "Watchpoint::closure");
     }
